# rust-lambda-event-sourcing

./: Cargo.toml  bootstrap.sh  compose.yaml
consumer/: Cargo.toml
consumer/src/: main.rs
producer/: Cargo.toml
producer/src/: main.rs
proto/: Cargo.toml  build.rs
proto/example/v1/: example.proto
proto/src/: lib.rs
