[workspace]
members = ["consumer", "producer", "proto"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
aws-config = "1.1.1"
aws-sdk-sqs = "1.9.0"
envy = "0.4.2"
prost = "0.12"
prost-build = "0.12"
prost-types = "0.12"
proto.path = "proto"
serde = "1.0.194"
serde_json = "1.0.111"
tokio = "1.35.1"
