[package]
name = "consumer"
edition.workspace = true
version.workspace = true

[dependencies]
aws_lambda_events = "0.13.0"
lambda_runtime = "0.8.2"
proto.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
